build/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LARROW
    NOT
    RARROW
    RETURN
    SEMICOLON

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statements -> statements statement
Rule 3     if_statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE elifs else_statement
Rule 4     bin_operators -> PLUS
Rule 5     bin_operators -> MINUS
Rule 6     bin_operators -> TIMES
Rule 7     bin_operators -> DIVIDE
Rule 8     bin_operators -> MOD
Rule 9     bin_operators -> EQEQ
Rule 10    bin_operators -> NOT_EQUAL
Rule 11    bin_operators -> LESS
Rule 12    bin_operators -> LESS_EQUAL
Rule 13    bin_operators -> GREATER
Rule 14    bin_operators -> GREATER_EQUAL
Rule 15    bin_operators -> AND
Rule 16    bin_operators -> OR
Rule 17    for_statement -> FOR IDENTIFIER IN for_sequence LBRACE statements RBRACE
Rule 18    empty -> <empty>
Rule 19    elifs -> elifs ELIF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 20    elifs -> empty
Rule 21    for_sequence -> IDENTIFIER
Rule 22    for_sequence -> collections
Rule 23    for_sequence -> INT DOT DOT INT
Rule 24    statement -> data_declaration
Rule 25    statement -> func_declaration
Rule 26    statement -> expression
Rule 27    statement -> if_statement
Rule 28    statement -> for_statement
Rule 29    statement -> while_statement
Rule 30    else_statement -> ELSE LBRACE statements RBRACE
Rule 31    else_statement -> empty
Rule 32    while_block -> WHILE LPAREN expression RPAREN
Rule 33    basic_typehints -> INT_TYPE
Rule 34    basic_typehints -> FLOAT_TYPE
Rule 35    basic_typehints -> BOOL_TYPE
Rule 36    basic_typehints -> STRING_TYPE
Rule 37    basic_typehints -> SET_TYPE
Rule 38    data_declaration -> LET IDENTIFIER COLON typehint EQUAL expression
Rule 39    data_declaration -> VAR IDENTIFIER COLON typehint EQUAL expression
Rule 40    data_declaration -> IDENTIFIER EQUAL expression
Rule 41    while_statement -> while_block LBRACE statements RBRACE
Rule 42    while_statement -> REPEAT LBRACE statements RBRACE while_block
Rule 43    typehint -> LBRACKET basic_typehints RBRACKET
Rule 44    typehint -> LBRACKET basic_typehints COLON basic_typehints RBRACKET
Rule 45    typehint -> basic_typehints
Rule 46    func_declaration -> FUNC IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
Rule 47    func_declaration -> FUNC IDENTIFIER LPAREN func_params RPAREN LBRACE statements RBRACE
Rule 48    func_params -> func_param
Rule 49    func_params -> func_params COMMA func_param
Rule 50    basic_types -> INT
Rule 51    basic_types -> FLOAT
Rule 52    basic_types -> BOOL
Rule 53    basic_types -> STRING
Rule 54    basic_types -> collections
Rule 55    func_param -> IDENTIFIER COLON typehint
Rule 56    expression -> IDENTIFIER
Rule 57    expression -> basic_types
Rule 58    expression -> comparison_expression
Rule 59    collections -> LBRACKET collection_contents RBRACKET
Rule 60    collections -> LPAREN collection_contents RPAREN
Rule 61    collection_contents -> collection_content
Rule 62    collection_contents -> collection_content COMMA collection_contents
Rule 63    comparison_expression -> expression bin_operators expression
Rule 64    collection_content -> basic_types
Rule 65    collection_content -> basic_types COLON basic_types

Terminals, with rules where they appear

AND                  : 15
BOOL                 : 52
BOOL_TYPE            : 35
COLON                : 38 39 44 55 65
COMMA                : 49 62
DIVIDE               : 7
DOT                  : 23 23
ELIF                 : 19
ELSE                 : 30
EQEQ                 : 9
EQUAL                : 38 39 40
FLOAT                : 51
FLOAT_TYPE           : 34
FOR                  : 17
FUNC                 : 46 47
GREATER              : 13
GREATER_EQUAL        : 14
IDENTIFIER           : 17 21 38 39 40 46 47 55 56
IF                   : 3
IN                   : 17
INT                  : 23 23 50
INT_TYPE             : 33
LARROW               : 
LBRACE               : 3 17 19 30 41 42 46 47
LBRACKET             : 43 44 59
LESS                 : 11
LESS_EQUAL           : 12
LET                  : 38
LPAREN               : 3 19 32 46 47 60
MINUS                : 5
MOD                  : 8
NOT                  : 
NOT_EQUAL            : 10
OR                   : 16
PLUS                 : 4
RARROW               : 
RBRACE               : 3 17 19 30 41 42 46 47
RBRACKET             : 43 44 59
REPEAT               : 42
RETURN               : 
RPAREN               : 3 19 32 46 47 60
SEMICOLON            : 
SET_TYPE             : 37
STRING               : 53
STRING_TYPE          : 36
TIMES                : 6
VAR                  : 39
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

basic_typehints      : 43 44 44 45
basic_types          : 57 64 65 65
bin_operators        : 63
collection_content   : 61 62
collection_contents  : 59 60 62
collections          : 22 54
comparison_expression : 58
data_declaration     : 24
elifs                : 3 19
else_statement       : 3
empty                : 20 31
expression           : 3 19 26 32 38 39 40 63 63
for_sequence         : 17
for_statement        : 28
func_declaration     : 25
func_param           : 48 49
func_params          : 47 49
if_statement         : 27
statement            : 1 2
statements           : 2 3 17 19 30 41 42 46 47 0
typehint             : 38 39 55
while_block          : 41 42
while_statement      : 29

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statements -> . statements statement
    (24) statement -> . data_declaration
    (25) statement -> . func_declaration
    (26) statement -> . expression
    (27) statement -> . if_statement
    (28) statement -> . for_statement
    (29) statement -> . while_statement
    (38) data_declaration -> . LET IDENTIFIER COLON typehint EQUAL expression
    (39) data_declaration -> . VAR IDENTIFIER COLON typehint EQUAL expression
    (40) data_declaration -> . IDENTIFIER EQUAL expression
    (46) func_declaration -> . FUNC IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (47) func_declaration -> . FUNC IDENTIFIER LPAREN func_params RPAREN LBRACE statements RBRACE
    (56) expression -> . IDENTIFIER
    (57) expression -> . basic_types
    (58) expression -> . comparison_expression
    (3) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE elifs else_statement
    (17) for_statement -> . FOR IDENTIFIER IN for_sequence LBRACE statements RBRACE
    (41) while_statement -> . while_block LBRACE statements RBRACE
    (42) while_statement -> . REPEAT LBRACE statements RBRACE while_block
    (50) basic_types -> . INT
    (51) basic_types -> . FLOAT
    (52) basic_types -> . BOOL
    (53) basic_types -> . STRING
    (54) basic_types -> . collections
    (63) comparison_expression -> . expression bin_operators expression
    (32) while_block -> . WHILE LPAREN expression RPAREN
    (59) collections -> . LBRACKET collection_contents RBRACKET
    (60) collections -> . LPAREN collection_contents RPAREN

    LET             shift and go to state 9
    VAR             shift and go to state 11
    IDENTIFIER      shift and go to state 10
    FUNC            shift and go to state 12
    IF              shift and go to state 16
    FOR             shift and go to state 17
    REPEAT          shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    BOOL            shift and go to state 22
    STRING          shift and go to state 23
    WHILE           shift and go to state 25
    LBRACKET        shift and go to state 26
    LPAREN          shift and go to state 13

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    data_declaration               shift and go to state 3
    func_declaration               shift and go to state 4
    expression                     shift and go to state 5
    if_statement                   shift and go to state 6
    for_statement                  shift and go to state 7
    while_statement                shift and go to state 8
    basic_types                    shift and go to state 14
    comparison_expression          shift and go to state 15
    while_block                    shift and go to state 18
    collections                    shift and go to state 24

state 1

    (0) S' -> statements .
    (2) statements -> statements . statement
    (24) statement -> . data_declaration
    (25) statement -> . func_declaration
    (26) statement -> . expression
    (27) statement -> . if_statement
    (28) statement -> . for_statement
    (29) statement -> . while_statement
    (38) data_declaration -> . LET IDENTIFIER COLON typehint EQUAL expression
    (39) data_declaration -> . VAR IDENTIFIER COLON typehint EQUAL expression
    (40) data_declaration -> . IDENTIFIER EQUAL expression
    (46) func_declaration -> . FUNC IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (47) func_declaration -> . FUNC IDENTIFIER LPAREN func_params RPAREN LBRACE statements RBRACE
    (56) expression -> . IDENTIFIER
    (57) expression -> . basic_types
    (58) expression -> . comparison_expression
    (3) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE elifs else_statement
    (17) for_statement -> . FOR IDENTIFIER IN for_sequence LBRACE statements RBRACE
    (41) while_statement -> . while_block LBRACE statements RBRACE
    (42) while_statement -> . REPEAT LBRACE statements RBRACE while_block
    (50) basic_types -> . INT
    (51) basic_types -> . FLOAT
    (52) basic_types -> . BOOL
    (53) basic_types -> . STRING
    (54) basic_types -> . collections
    (63) comparison_expression -> . expression bin_operators expression
    (32) while_block -> . WHILE LPAREN expression RPAREN
    (59) collections -> . LBRACKET collection_contents RBRACKET
    (60) collections -> . LPAREN collection_contents RPAREN

    LET             shift and go to state 9
    VAR             shift and go to state 11
    IDENTIFIER      shift and go to state 10
    FUNC            shift and go to state 12
    IF              shift and go to state 16
    FOR             shift and go to state 17
    REPEAT          shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    BOOL            shift and go to state 22
    STRING          shift and go to state 23
    WHILE           shift and go to state 25
    LBRACKET        shift and go to state 26
    LPAREN          shift and go to state 13

    statement                      shift and go to state 27
    data_declaration               shift and go to state 3
    func_declaration               shift and go to state 4
    expression                     shift and go to state 5
    if_statement                   shift and go to state 6
    for_statement                  shift and go to state 7
    while_statement                shift and go to state 8
    basic_types                    shift and go to state 14
    comparison_expression          shift and go to state 15
    while_block                    shift and go to state 18
    collections                    shift and go to state 24

state 2

    (1) statements -> statement .

    LET             reduce using rule 1 (statements -> statement .)
    VAR             reduce using rule 1 (statements -> statement .)
    IDENTIFIER      reduce using rule 1 (statements -> statement .)
    FUNC            reduce using rule 1 (statements -> statement .)
    IF              reduce using rule 1 (statements -> statement .)
    FOR             reduce using rule 1 (statements -> statement .)
    REPEAT          reduce using rule 1 (statements -> statement .)
    INT             reduce using rule 1 (statements -> statement .)
    FLOAT           reduce using rule 1 (statements -> statement .)
    BOOL            reduce using rule 1 (statements -> statement .)
    STRING          reduce using rule 1 (statements -> statement .)
    WHILE           reduce using rule 1 (statements -> statement .)
    LBRACKET        reduce using rule 1 (statements -> statement .)
    LPAREN          reduce using rule 1 (statements -> statement .)
    $end            reduce using rule 1 (statements -> statement .)
    RBRACE          reduce using rule 1 (statements -> statement .)


state 3

    (24) statement -> data_declaration .

    LET             reduce using rule 24 (statement -> data_declaration .)
    VAR             reduce using rule 24 (statement -> data_declaration .)
    IDENTIFIER      reduce using rule 24 (statement -> data_declaration .)
    FUNC            reduce using rule 24 (statement -> data_declaration .)
    IF              reduce using rule 24 (statement -> data_declaration .)
    FOR             reduce using rule 24 (statement -> data_declaration .)
    REPEAT          reduce using rule 24 (statement -> data_declaration .)
    INT             reduce using rule 24 (statement -> data_declaration .)
    FLOAT           reduce using rule 24 (statement -> data_declaration .)
    BOOL            reduce using rule 24 (statement -> data_declaration .)
    STRING          reduce using rule 24 (statement -> data_declaration .)
    WHILE           reduce using rule 24 (statement -> data_declaration .)
    LBRACKET        reduce using rule 24 (statement -> data_declaration .)
    LPAREN          reduce using rule 24 (statement -> data_declaration .)
    $end            reduce using rule 24 (statement -> data_declaration .)
    RBRACE          reduce using rule 24 (statement -> data_declaration .)


state 4

    (25) statement -> func_declaration .

    LET             reduce using rule 25 (statement -> func_declaration .)
    VAR             reduce using rule 25 (statement -> func_declaration .)
    IDENTIFIER      reduce using rule 25 (statement -> func_declaration .)
    FUNC            reduce using rule 25 (statement -> func_declaration .)
    IF              reduce using rule 25 (statement -> func_declaration .)
    FOR             reduce using rule 25 (statement -> func_declaration .)
    REPEAT          reduce using rule 25 (statement -> func_declaration .)
    INT             reduce using rule 25 (statement -> func_declaration .)
    FLOAT           reduce using rule 25 (statement -> func_declaration .)
    BOOL            reduce using rule 25 (statement -> func_declaration .)
    STRING          reduce using rule 25 (statement -> func_declaration .)
    WHILE           reduce using rule 25 (statement -> func_declaration .)
    LBRACKET        reduce using rule 25 (statement -> func_declaration .)
    LPAREN          reduce using rule 25 (statement -> func_declaration .)
    $end            reduce using rule 25 (statement -> func_declaration .)
    RBRACE          reduce using rule 25 (statement -> func_declaration .)


state 5

    (26) statement -> expression .
    (63) comparison_expression -> expression . bin_operators expression
    (4) bin_operators -> . PLUS
    (5) bin_operators -> . MINUS
    (6) bin_operators -> . TIMES
    (7) bin_operators -> . DIVIDE
    (8) bin_operators -> . MOD
    (9) bin_operators -> . EQEQ
    (10) bin_operators -> . NOT_EQUAL
    (11) bin_operators -> . LESS
    (12) bin_operators -> . LESS_EQUAL
    (13) bin_operators -> . GREATER
    (14) bin_operators -> . GREATER_EQUAL
    (15) bin_operators -> . AND
    (16) bin_operators -> . OR

    LET             reduce using rule 26 (statement -> expression .)
    VAR             reduce using rule 26 (statement -> expression .)
    IDENTIFIER      reduce using rule 26 (statement -> expression .)
    FUNC            reduce using rule 26 (statement -> expression .)
    IF              reduce using rule 26 (statement -> expression .)
    FOR             reduce using rule 26 (statement -> expression .)
    REPEAT          reduce using rule 26 (statement -> expression .)
    INT             reduce using rule 26 (statement -> expression .)
    FLOAT           reduce using rule 26 (statement -> expression .)
    BOOL            reduce using rule 26 (statement -> expression .)
    STRING          reduce using rule 26 (statement -> expression .)
    WHILE           reduce using rule 26 (statement -> expression .)
    LBRACKET        reduce using rule 26 (statement -> expression .)
    LPAREN          reduce using rule 26 (statement -> expression .)
    $end            reduce using rule 26 (statement -> expression .)
    RBRACE          reduce using rule 26 (statement -> expression .)
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32
    MOD             shift and go to state 33
    EQEQ            shift and go to state 34
    NOT_EQUAL       shift and go to state 35
    LESS            shift and go to state 36
    LESS_EQUAL      shift and go to state 37
    GREATER         shift and go to state 38
    GREATER_EQUAL   shift and go to state 39
    AND             shift and go to state 40
    OR              shift and go to state 41

    bin_operators                  shift and go to state 28

state 6

    (27) statement -> if_statement .

    LET             reduce using rule 27 (statement -> if_statement .)
    VAR             reduce using rule 27 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 27 (statement -> if_statement .)
    FUNC            reduce using rule 27 (statement -> if_statement .)
    IF              reduce using rule 27 (statement -> if_statement .)
    FOR             reduce using rule 27 (statement -> if_statement .)
    REPEAT          reduce using rule 27 (statement -> if_statement .)
    INT             reduce using rule 27 (statement -> if_statement .)
    FLOAT           reduce using rule 27 (statement -> if_statement .)
    BOOL            reduce using rule 27 (statement -> if_statement .)
    STRING          reduce using rule 27 (statement -> if_statement .)
    WHILE           reduce using rule 27 (statement -> if_statement .)
    LBRACKET        reduce using rule 27 (statement -> if_statement .)
    LPAREN          reduce using rule 27 (statement -> if_statement .)
    $end            reduce using rule 27 (statement -> if_statement .)
    RBRACE          reduce using rule 27 (statement -> if_statement .)


state 7

    (28) statement -> for_statement .

    LET             reduce using rule 28 (statement -> for_statement .)
    VAR             reduce using rule 28 (statement -> for_statement .)
    IDENTIFIER      reduce using rule 28 (statement -> for_statement .)
    FUNC            reduce using rule 28 (statement -> for_statement .)
    IF              reduce using rule 28 (statement -> for_statement .)
    FOR             reduce using rule 28 (statement -> for_statement .)
    REPEAT          reduce using rule 28 (statement -> for_statement .)
    INT             reduce using rule 28 (statement -> for_statement .)
    FLOAT           reduce using rule 28 (statement -> for_statement .)
    BOOL            reduce using rule 28 (statement -> for_statement .)
    STRING          reduce using rule 28 (statement -> for_statement .)
    WHILE           reduce using rule 28 (statement -> for_statement .)
    LBRACKET        reduce using rule 28 (statement -> for_statement .)
    LPAREN          reduce using rule 28 (statement -> for_statement .)
    $end            reduce using rule 28 (statement -> for_statement .)
    RBRACE          reduce using rule 28 (statement -> for_statement .)


state 8

    (29) statement -> while_statement .

    LET             reduce using rule 29 (statement -> while_statement .)
    VAR             reduce using rule 29 (statement -> while_statement .)
    IDENTIFIER      reduce using rule 29 (statement -> while_statement .)
    FUNC            reduce using rule 29 (statement -> while_statement .)
    IF              reduce using rule 29 (statement -> while_statement .)
    FOR             reduce using rule 29 (statement -> while_statement .)
    REPEAT          reduce using rule 29 (statement -> while_statement .)
    INT             reduce using rule 29 (statement -> while_statement .)
    FLOAT           reduce using rule 29 (statement -> while_statement .)
    BOOL            reduce using rule 29 (statement -> while_statement .)
    STRING          reduce using rule 29 (statement -> while_statement .)
    WHILE           reduce using rule 29 (statement -> while_statement .)
    LBRACKET        reduce using rule 29 (statement -> while_statement .)
    LPAREN          reduce using rule 29 (statement -> while_statement .)
    $end            reduce using rule 29 (statement -> while_statement .)
    RBRACE          reduce using rule 29 (statement -> while_statement .)


state 9

    (38) data_declaration -> LET . IDENTIFIER COLON typehint EQUAL expression

    IDENTIFIER      shift and go to state 42


state 10

    (40) data_declaration -> IDENTIFIER . EQUAL expression
    (56) expression -> IDENTIFIER .

    EQUAL           shift and go to state 43
    PLUS            reduce using rule 56 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 56 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 56 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 56 (expression -> IDENTIFIER .)
    MOD             reduce using rule 56 (expression -> IDENTIFIER .)
    EQEQ            reduce using rule 56 (expression -> IDENTIFIER .)
    NOT_EQUAL       reduce using rule 56 (expression -> IDENTIFIER .)
    LESS            reduce using rule 56 (expression -> IDENTIFIER .)
    LESS_EQUAL      reduce using rule 56 (expression -> IDENTIFIER .)
    GREATER         reduce using rule 56 (expression -> IDENTIFIER .)
    GREATER_EQUAL   reduce using rule 56 (expression -> IDENTIFIER .)
    AND             reduce using rule 56 (expression -> IDENTIFIER .)
    OR              reduce using rule 56 (expression -> IDENTIFIER .)
    LET             reduce using rule 56 (expression -> IDENTIFIER .)
    VAR             reduce using rule 56 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 56 (expression -> IDENTIFIER .)
    FUNC            reduce using rule 56 (expression -> IDENTIFIER .)
    IF              reduce using rule 56 (expression -> IDENTIFIER .)
    FOR             reduce using rule 56 (expression -> IDENTIFIER .)
    REPEAT          reduce using rule 56 (expression -> IDENTIFIER .)
    INT             reduce using rule 56 (expression -> IDENTIFIER .)
    FLOAT           reduce using rule 56 (expression -> IDENTIFIER .)
    BOOL            reduce using rule 56 (expression -> IDENTIFIER .)
    STRING          reduce using rule 56 (expression -> IDENTIFIER .)
    WHILE           reduce using rule 56 (expression -> IDENTIFIER .)
    LBRACKET        reduce using rule 56 (expression -> IDENTIFIER .)
    LPAREN          reduce using rule 56 (expression -> IDENTIFIER .)
    $end            reduce using rule 56 (expression -> IDENTIFIER .)
    RBRACE          reduce using rule 56 (expression -> IDENTIFIER .)


state 11

    (39) data_declaration -> VAR . IDENTIFIER COLON typehint EQUAL expression

    IDENTIFIER      shift and go to state 44


state 12

    (46) func_declaration -> FUNC . IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (47) func_declaration -> FUNC . IDENTIFIER LPAREN func_params RPAREN LBRACE statements RBRACE

    IDENTIFIER      shift and go to state 45


state 13

    (60) collections -> LPAREN . collection_contents RPAREN
    (61) collection_contents -> . collection_content
    (62) collection_contents -> . collection_content COMMA collection_contents
    (64) collection_content -> . basic_types
    (65) collection_content -> . basic_types COLON basic_types
    (50) basic_types -> . INT
    (51) basic_types -> . FLOAT
    (52) basic_types -> . BOOL
    (53) basic_types -> . STRING
    (54) basic_types -> . collections
    (59) collections -> . LBRACKET collection_contents RBRACKET
    (60) collections -> . LPAREN collection_contents RPAREN

    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    BOOL            shift and go to state 22
    STRING          shift and go to state 23
    LBRACKET        shift and go to state 26
    LPAREN          shift and go to state 13

    collection_contents            shift and go to state 46
    collection_content             shift and go to state 47
    basic_types                    shift and go to state 48
    collections                    shift and go to state 24

state 14

    (57) expression -> basic_types .

    PLUS            reduce using rule 57 (expression -> basic_types .)
    MINUS           reduce using rule 57 (expression -> basic_types .)
    TIMES           reduce using rule 57 (expression -> basic_types .)
    DIVIDE          reduce using rule 57 (expression -> basic_types .)
    MOD             reduce using rule 57 (expression -> basic_types .)
    EQEQ            reduce using rule 57 (expression -> basic_types .)
    NOT_EQUAL       reduce using rule 57 (expression -> basic_types .)
    LESS            reduce using rule 57 (expression -> basic_types .)
    LESS_EQUAL      reduce using rule 57 (expression -> basic_types .)
    GREATER         reduce using rule 57 (expression -> basic_types .)
    GREATER_EQUAL   reduce using rule 57 (expression -> basic_types .)
    AND             reduce using rule 57 (expression -> basic_types .)
    OR              reduce using rule 57 (expression -> basic_types .)
    LET             reduce using rule 57 (expression -> basic_types .)
    VAR             reduce using rule 57 (expression -> basic_types .)
    IDENTIFIER      reduce using rule 57 (expression -> basic_types .)
    FUNC            reduce using rule 57 (expression -> basic_types .)
    IF              reduce using rule 57 (expression -> basic_types .)
    FOR             reduce using rule 57 (expression -> basic_types .)
    REPEAT          reduce using rule 57 (expression -> basic_types .)
    INT             reduce using rule 57 (expression -> basic_types .)
    FLOAT           reduce using rule 57 (expression -> basic_types .)
    BOOL            reduce using rule 57 (expression -> basic_types .)
    STRING          reduce using rule 57 (expression -> basic_types .)
    WHILE           reduce using rule 57 (expression -> basic_types .)
    LBRACKET        reduce using rule 57 (expression -> basic_types .)
    LPAREN          reduce using rule 57 (expression -> basic_types .)
    $end            reduce using rule 57 (expression -> basic_types .)
    RBRACE          reduce using rule 57 (expression -> basic_types .)
    RPAREN          reduce using rule 57 (expression -> basic_types .)


state 15

    (58) expression -> comparison_expression .

    PLUS            reduce using rule 58 (expression -> comparison_expression .)
    MINUS           reduce using rule 58 (expression -> comparison_expression .)
    TIMES           reduce using rule 58 (expression -> comparison_expression .)
    DIVIDE          reduce using rule 58 (expression -> comparison_expression .)
    MOD             reduce using rule 58 (expression -> comparison_expression .)
    EQEQ            reduce using rule 58 (expression -> comparison_expression .)
    NOT_EQUAL       reduce using rule 58 (expression -> comparison_expression .)
    LESS            reduce using rule 58 (expression -> comparison_expression .)
    LESS_EQUAL      reduce using rule 58 (expression -> comparison_expression .)
    GREATER         reduce using rule 58 (expression -> comparison_expression .)
    GREATER_EQUAL   reduce using rule 58 (expression -> comparison_expression .)
    AND             reduce using rule 58 (expression -> comparison_expression .)
    OR              reduce using rule 58 (expression -> comparison_expression .)
    LET             reduce using rule 58 (expression -> comparison_expression .)
    VAR             reduce using rule 58 (expression -> comparison_expression .)
    IDENTIFIER      reduce using rule 58 (expression -> comparison_expression .)
    FUNC            reduce using rule 58 (expression -> comparison_expression .)
    IF              reduce using rule 58 (expression -> comparison_expression .)
    FOR             reduce using rule 58 (expression -> comparison_expression .)
    REPEAT          reduce using rule 58 (expression -> comparison_expression .)
    INT             reduce using rule 58 (expression -> comparison_expression .)
    FLOAT           reduce using rule 58 (expression -> comparison_expression .)
    BOOL            reduce using rule 58 (expression -> comparison_expression .)
    STRING          reduce using rule 58 (expression -> comparison_expression .)
    WHILE           reduce using rule 58 (expression -> comparison_expression .)
    LBRACKET        reduce using rule 58 (expression -> comparison_expression .)
    LPAREN          reduce using rule 58 (expression -> comparison_expression .)
    $end            reduce using rule 58 (expression -> comparison_expression .)
    RBRACE          reduce using rule 58 (expression -> comparison_expression .)
    RPAREN          reduce using rule 58 (expression -> comparison_expression .)


state 16

    (3) if_statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE elifs else_statement

    LPAREN          shift and go to state 49


state 17

    (17) for_statement -> FOR . IDENTIFIER IN for_sequence LBRACE statements RBRACE

    IDENTIFIER      shift and go to state 50


state 18

    (41) while_statement -> while_block . LBRACE statements RBRACE

    LBRACE          shift and go to state 51


state 19

    (42) while_statement -> REPEAT . LBRACE statements RBRACE while_block

    LBRACE          shift and go to state 52


state 20

    (50) basic_types -> INT .

    PLUS            reduce using rule 50 (basic_types -> INT .)
    MINUS           reduce using rule 50 (basic_types -> INT .)
    TIMES           reduce using rule 50 (basic_types -> INT .)
    DIVIDE          reduce using rule 50 (basic_types -> INT .)
    MOD             reduce using rule 50 (basic_types -> INT .)
    EQEQ            reduce using rule 50 (basic_types -> INT .)
    NOT_EQUAL       reduce using rule 50 (basic_types -> INT .)
    LESS            reduce using rule 50 (basic_types -> INT .)
    LESS_EQUAL      reduce using rule 50 (basic_types -> INT .)
    GREATER         reduce using rule 50 (basic_types -> INT .)
    GREATER_EQUAL   reduce using rule 50 (basic_types -> INT .)
    AND             reduce using rule 50 (basic_types -> INT .)
    OR              reduce using rule 50 (basic_types -> INT .)
    LET             reduce using rule 50 (basic_types -> INT .)
    VAR             reduce using rule 50 (basic_types -> INT .)
    IDENTIFIER      reduce using rule 50 (basic_types -> INT .)
    FUNC            reduce using rule 50 (basic_types -> INT .)
    IF              reduce using rule 50 (basic_types -> INT .)
    FOR             reduce using rule 50 (basic_types -> INT .)
    REPEAT          reduce using rule 50 (basic_types -> INT .)
    INT             reduce using rule 50 (basic_types -> INT .)
    FLOAT           reduce using rule 50 (basic_types -> INT .)
    BOOL            reduce using rule 50 (basic_types -> INT .)
    STRING          reduce using rule 50 (basic_types -> INT .)
    WHILE           reduce using rule 50 (basic_types -> INT .)
    LBRACKET        reduce using rule 50 (basic_types -> INT .)
    LPAREN          reduce using rule 50 (basic_types -> INT .)
    $end            reduce using rule 50 (basic_types -> INT .)
    COLON           reduce using rule 50 (basic_types -> INT .)
    COMMA           reduce using rule 50 (basic_types -> INT .)
    RPAREN          reduce using rule 50 (basic_types -> INT .)
    RBRACKET        reduce using rule 50 (basic_types -> INT .)
    RBRACE          reduce using rule 50 (basic_types -> INT .)


state 21

    (51) basic_types -> FLOAT .

    PLUS            reduce using rule 51 (basic_types -> FLOAT .)
    MINUS           reduce using rule 51 (basic_types -> FLOAT .)
    TIMES           reduce using rule 51 (basic_types -> FLOAT .)
    DIVIDE          reduce using rule 51 (basic_types -> FLOAT .)
    MOD             reduce using rule 51 (basic_types -> FLOAT .)
    EQEQ            reduce using rule 51 (basic_types -> FLOAT .)
    NOT_EQUAL       reduce using rule 51 (basic_types -> FLOAT .)
    LESS            reduce using rule 51 (basic_types -> FLOAT .)
    LESS_EQUAL      reduce using rule 51 (basic_types -> FLOAT .)
    GREATER         reduce using rule 51 (basic_types -> FLOAT .)
    GREATER_EQUAL   reduce using rule 51 (basic_types -> FLOAT .)
    AND             reduce using rule 51 (basic_types -> FLOAT .)
    OR              reduce using rule 51 (basic_types -> FLOAT .)
    LET             reduce using rule 51 (basic_types -> FLOAT .)
    VAR             reduce using rule 51 (basic_types -> FLOAT .)
    IDENTIFIER      reduce using rule 51 (basic_types -> FLOAT .)
    FUNC            reduce using rule 51 (basic_types -> FLOAT .)
    IF              reduce using rule 51 (basic_types -> FLOAT .)
    FOR             reduce using rule 51 (basic_types -> FLOAT .)
    REPEAT          reduce using rule 51 (basic_types -> FLOAT .)
    INT             reduce using rule 51 (basic_types -> FLOAT .)
    FLOAT           reduce using rule 51 (basic_types -> FLOAT .)
    BOOL            reduce using rule 51 (basic_types -> FLOAT .)
    STRING          reduce using rule 51 (basic_types -> FLOAT .)
    WHILE           reduce using rule 51 (basic_types -> FLOAT .)
    LBRACKET        reduce using rule 51 (basic_types -> FLOAT .)
    LPAREN          reduce using rule 51 (basic_types -> FLOAT .)
    $end            reduce using rule 51 (basic_types -> FLOAT .)
    COLON           reduce using rule 51 (basic_types -> FLOAT .)
    COMMA           reduce using rule 51 (basic_types -> FLOAT .)
    RPAREN          reduce using rule 51 (basic_types -> FLOAT .)
    RBRACKET        reduce using rule 51 (basic_types -> FLOAT .)
    RBRACE          reduce using rule 51 (basic_types -> FLOAT .)


state 22

    (52) basic_types -> BOOL .
